# market-breadth-analysis

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README-ja.md  README.md  fmp_data_fetcher.py  index.html  market_breadth.py  pyproject.toml  requirements.txt  trigger_market_breadth.py
.github/workflows/: ci.yml  daily-market-breadth.yml  market_breadth.yml
backtest/: backtest.py  backtest_design.md  run_multi_etf_backtest.py
docs/: plotly-migration-design.md  rsp-breadth-strategy-design.md  trade_logging_design.md  trigger-market-breadth-design.md
market_breadth/data/: sp500_price_data.csv
reports/: backtest_results_summary.csv  backtest_results_summary.md  index.html
rsp_breadth_strategy/: .gitignore  README.md  pyproject.toml
rsp_breadth_strategy/scripts/: ablation_overrides.py  decomposition_2x2.py  evaluate_all.py  sensitivity_sweep.py
rsp_breadth_strategy/src/rsp_breadth_strategy/: __init__.py  backtest.py  cli.py  metrics.py  signals.py  weights.py
rsp_breadth_strategy/tests/: __init__.py  test_backtest.py  test_metrics.py  test_signals.py  test_sweep.py  test_weights.py
scripts/: compare_tv_python_trades.py
tests/: __init__.py  test_market_breadth_trader.py  test_market_breadth_utils.py  test_plotly_chart.py  test_sp500_fetch.py  test_trade_logging.py  test_tv_pine_compat.py
trade/: __init__.py  design_market_breadth_trade.md  run_market_breadth_trade.py  tasks.md
